--- a/Soviet/Index.html
+++ b/Soviet/Index.html
@@ -76,7 +76,7 @@
             display: grid;
             justify-content: center;
             grid-template-columns: repeat(4, 1fr);
-            margin-left: 15%;
+            margin-left: -5%;
             margin-right: 15%;
             margin-top: 30%;
 
@@ -123,22 +123,19 @@
 
         <div class="wrapper">
            <div id="link1">
-               <a href="news.html">
-                   <div class="sBilde"><img src="logo/580b57fcd9996e24bc43c543.png" alt=""></div>
-                   <div class="undertekst">RUSKI NEWS</div>
-               </a>
+
 
            </div>
            <div id="link2">
                <a href="signup.html">
-                   <div class="sBilde"><img src="logo/Android_O_Preview_Logo.png" alt=""></div>
+                   <div class="sBilde"><img src="logo/Soviet_sigil.png" alt=""></div>
                    <div class="undertekst">JOIN ARMY</div>
                </a>
            </div>
            <div id="link3">
                <a href="slav.html">
-                   <div class="sBilde"><img src="logo/Burger_King_Logo.svg.png" alt=""></div>
-                   <div class="undertekst">SLAV-QUIZ</div>
+                   <div class="sBilde"><img src="logo/slav.png" alt=""></div>
+                   <div class="undertekst">SOVIET LOTTERY</div>
                </a>
 
            </div>
