--- a/Soviet/Index.html
+++ b/Soviet/Index.html
@@ -134,7 +134,7 @@
            </div>
            <div id="link3">
                <a href="slav.html">
-                   <div class="sBilde"><img src="logo/slav.png" alt=""></div>
+                   <div class="sBilde"><img src="logo/rulett.png" alt=""></div>
                    <div class="undertekst">SOVIET LOTTERY</div>
                </a>
 
